--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <script src="https://apis.google.com/js/api.js"></script>
     <script>
         // 여기에 YOUR_CLIENT_ID를 실제 Google Cloud Console에서 받은 클라이언트 ID로 교체하세요
-        const CLIENT_ID = 'YOUR_CLIENT_ID';
-        const API_KEY = 'YOUR_API_KEY';
+        const CLIENT_ID = '402792213720-28p6phnbcgr26dnqst191k92rnnfsihu.apps.googleusercontent.com';
+        const API_KEY = 'AIzaSyDn9NKes15tmdIdbGW_ilp7ag39huWK-Bc';
 
         let mediaRecorder;
         let audioChunks = [];
